syntax = "proto3";

package example;

service ExampleService {
  rpc sayHello (HelloRequest) returns (HelloResponse) {};
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
